--- a/man/procmail.man
+++ b/man/procmail.man
@@ -1,6 +1,6 @@
 Please read the README file in this directory first.
 .ex
-.Id $Id: procmail.man,v 1.80.2.2 2001/07/15 09:27:01 guenther Exp $
+.Id $Id: procmail.man,v 1.89 2001/06/28 22:43:08 guenther Exp $
 .TH PROCMAIL 1 \*(Dt BuGless
 .na
 .SH NAME
@@ -17,6 +17,7 @@ procmail \- autonomous mail processor
 .RB [ \-@TEMPFAILOPT@@OVERRIDEOPT@@BERKELEYOPT@ ]
 .RB [ "\-@FROMWHOPT@ \fIfromwhom\fP" ]
 .RB [ "\-@ARGUMENTOPT@ \fIargument\fP" ]
+\&.\|.\|.
 .if n .ti +0.5i
 .B \-@DELIVEROPT@
 .I recipient
@@ -30,8 +31,7 @@ procmail \- autonomous mail processor
 .I rcfile
 .if n .ti +0.5i
 .RI [ argument ]
-\&.\|.\|.
-.br
+\&.\|.\|.@LMTPusage@.br
 .B procmail
 .B \-@VERSIONOPT@
 .ad
@@ -144,9 +144,11 @@ fields.
 .I "\fB\-@ARGUMENTOPT@\fP argument"
 This will set $1 to be equal to
 .IR argument .
-It can be used to pass meta information along to procmail.  This is
-typically done by passing along the $@x information from the sendmail
-mailer rule.
+Each succeeding
+.I "\fB\-@ARGUMENTOPT@\fP argument"
+will set the next number variable ($2, $3, etc).  It can be used
+to pass meta information along to procmail.  This is typically done
+by passing along the $@x information from the sendmail mailer rule.
 .TP
 .I "\fB\-@DELIVEROPT@\fP recipient .\|.\|."
 This turns on explicit delivery mode, delivery will be to the local user
@@ -164,8 +166,7 @@ must be specified on the command line.  After the rcfile, procmail will
 accept an unlimited number of arguments.@ETCRCS_desc@
 For some advanced usage of this option you should look in the
 .B EXAMPLES
-section below.
-.SH ARGUMENTS
+section below.@LMTPOPTdesc@.SH ARGUMENTS
 Any arguments containing an '=' are considered to be environment variable
 assignments, they will
 .I all
@@ -337,6 +338,20 @@ Nonexistent subdirectory, no write permission, pipe died or disk full.
 Exceeded LINEBUF
 Buffer overflow detected, LINEBUF was too small, PROCMAIL_OVERFLOW has
 been set.
+.TP
+MAILDIR is not an absolute path
+.TP
+MAILDIR path too long
+.TP
+ORGMAIL is not an absolute path
+.TP
+ORGMAIL path too long
+.TP
+default rcfile is not an absolute path
+.TP
+default rcfile path too long
+The specified item's full path, when expanded, was longer than LINEBUF
+or didn't start with a file separator.
 .TP
 Excessive output quenched from "x"
 The program or filter "x" tried to produce too much output for the current
@@ -576,7 +591,7 @@ domain. It can be done if you manage to configure your MTA to add some
 headers with the envelope recipient data in order to tell Procmail who
 a message is for, but this is usually not the right thing to do.
 Perhaps you want to investigate if your MTA offers `virtual user
-tables', or check out the `multidrop' facility of Fetchmail.
+tables', or see check out the `multidrop' facility of Fetchmail.
 .SH BUGS
 After removing a lockfile by force, procmail waits $SUSPEND seconds before
 creating a new lockfile so that another process that decides to remove the
@@ -616,8 +631,8 @@ If the destination name used in explicit delivery mode is not in /etc/passwd,
 procmail will proceed as if explicit delivery mode was not in effect.
 If not in explicit delivery mode and
 should the uid procmail is running under, have no corresponding /etc/passwd
-entry, then HOME will default to @ROOT_DIR@, LOGNAME will default to #uid,
-SHELL will default to @BinSh@, and ORGMAIL will default to
+entry, then HOME will default to @ROOT_DIR@, LOGNAME will default to the
+numeric uid, SHELL will default to @BinSh@, and ORGMAIL will default to
 @DEAD_LETTER@.
 .PP
 When in explicit delivery mode, procmail will generate a leading `@FROM@'
@@ -686,7 +701,7 @@ Calling up procmail with the \-@HELPOPT1@ or \-@HELPOPT2@ options will cause
 it to display a command-line help and recipe flag quick-reference page.
 .PP
 There exists an excellent newbie FAQ about mailfilters (and procmail
-in particular); it is maintained by Nancy McGough <nancym@ii.com>
+in particular); it is being maintained by Nancy McGough <nancym@ii.com>
 and can be obtained by sending a mail to mail-server@rtfm.mit.edu with
 the following in the body:
 .RS
